--- a/hunting-coder/package.json
+++ b/hunting-coder/package.json
@@ -5,7 +5,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export":"next build && next export"
+
   },
   "dependencies": {
     "next": "13.3.2",
